Fixed wraping issue, added disclaimer and logos

--- a/_css/jtd.css
+++ b/_css/jtd.css
@@ -470,7 +470,7 @@ Franklin SPECIFICS
 .franklin-content a {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: wrap;
 }
 
 .franklin-content ul,
